# Akkadian-to-English

./: .aiignore  .gitignore  DATA_INFO.md  Deep_Past_Competition_Analysis.md  README.md  V7_Planning_Analysis.md  V7_Planning_Final.md  V7_STRATEGY.md  pyproject.toml
.claude/: settings.json
CLAUDE/: AKKADIAN_BREAKTHROUGH_RESEARCH_ko.md  AKKADIAN_LANGUAGE_ANALYSIS.md  COMPETITION_TRENDS.md  DATA_QUALITY_AUDIT.md  DATA_STRATEGY.md  DEEP_EDA_REPORT.md  DEEP_EDA_REPORT_ko.md  EDA_REPORT.md  ENSEMBLE_STRATEGY_DETAIL.md  MODEL_RECOMMENDATION.md  PUBLICATIONS_DATA_STRATEGY.md  V1_FAILURE_DIAGNOSIS.md  V2_ANALYSIS_AND_NEXT_STEPS.md  V2_MASTER_PLAN.md  V2_TRAINING_DEBUG_REPORT.md  augmented_train.csv  data_preprocessing.py  eda_akkadian.py  processed_sentences.csv
GPT/: eda.py
data/v2/: v2_train.csv  v2_train_augmented.csv  v2_val.csv
data_v7/: v7_glossary.json  v7_val.csv
docs/: COMPETITION_INFO.md  COMPETITION_INFO_ko.md  DATA_INFO_ko.md  V3_ROBUST_STRATEGY_ko.md  V3_STRATEGY_ko.md  V5_STRATEGY_ko.md  V8_STRATEGY.md  VERSION_HISTORY_ko.md
src/: AKKA_V1_GUIDE.md  akka_v1_infer.ipynb  akka_v1_infer.py  akka_v1_train.ipynb  akka_v1_train.py  data_preprocessing.py  kaggle_baseline.ipynb  kaggle_baseline.py  kaggle_infer.ipynb  kaggle_infer.py  train_baseline.ipynb  train_baseline.py  train_baseline_mps.py
src/common/: preprocessing.py
src/notebooks/: akka_v1_infer.py
src/v1/: akka-v1-infer-small.ipynb  akka_v1_infer.ipynb  akka_v1_infer.py
src/v2/: akka_v2_infer.ipynb  akka_v2_infer.py  akka_v2_train.ipynb  akka_v2_train.py  augment_data.py  build_dataset.py  (+4 more)
(+59 files in other folders)
