[project]
name = "akkadian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.0",
    "datasets>=4.4.0",
    "jupytext>=1.16.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0,<2.4",
    "pandas>=3.0.0",
    "sacrebleu>=2.5.1",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.57.0",
]
